<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="delete_ci_test" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFs-TZ-gLj">
                                <rect key="frame" x="279" y="290" width="42" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thq-oN-4s8">
                                <rect key="frame" x="279" y="383" width="73" height="30"/>
                                <state key="normal" title="Set button"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tkV-Ed-nPi"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wnp-Yb-iGk">
                                <rect key="frame" x="264" y="426" width="102" height="30"/>
                                <state key="normal" title="go next screen"/>
                                <connections>
                                    <action selector="nextScreenTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dYt-9g-RkV"/>
                                    <segue destination="N7F-lK-9qI" kind="presentation" id="b6U-4e-TZG"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="zFs-TZ-gLj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kdh-rL-8MB"/>
                            <constraint firstItem="wnp-Yb-iGk" firstAttribute="top" secondItem="thq-oN-4s8" secondAttribute="bottom" constant="13" id="R1U-K6-Iyu"/>
                            <constraint firstItem="thq-oN-4s8" firstAttribute="leading" secondItem="zFs-TZ-gLj" secondAttribute="trailing" constant="-42" id="ZPu-Dr-kyV"/>
                            <constraint firstItem="thq-oN-4s8" firstAttribute="top" secondItem="zFs-TZ-gLj" secondAttribute="bottom" constant="72.5" id="r3g-lG-Jld"/>
                            <constraint firstItem="thq-oN-4s8" firstAttribute="leading" secondItem="wnp-Yb-iGk" secondAttribute="trailing" constant="-87" id="tN5-M7-r2S"/>
                            <constraint firstItem="zFs-TZ-gLj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="y44-le-mYu"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="myLabel" destination="zFs-TZ-gLj" id="ZfQ-oF-jH4"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
        <!--View Controller-->
        <scene sceneID="PKP-ND-LMk">
            <objects>
                <viewController id="N7F-lK-9qI" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="MbT-al-vry"/>
                        <viewControllerLayoutGuide type="bottom" id="nhI-wS-Hpr"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="I53-c0-iu4">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2nd screen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOO-8h-5Hd">
                                <rect key="frame" x="257" y="290" width="86" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="sOO-8h-5Hd" firstAttribute="centerX" secondItem="I53-c0-iu4" secondAttribute="centerX" id="6Hr-yH-b7C"/>
                            <constraint firstItem="sOO-8h-5Hd" firstAttribute="centerY" secondItem="I53-c0-iu4" secondAttribute="centerY" id="Rbe-Xh-94Y"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ae7-Bf-Xpc" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1004" y="387"/>
        </scene>
    </scenes>
</document>
